--- a/public/index.css
+++ b/public/index.css
@@ -2,10 +2,11 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: rgb(64, 165, 135);
+    background: rgb(76, 199, 252);
     background-size: cover;
     overflow-y: scroll;
 }
+
 .box {
     position: absolute;
     top: 250px;
@@ -18,6 +19,7 @@ body {
     box-shadow: 0 15px 25px rgba(0, 0, 0, .5);
     border-radius: 10px;
 }
+
 .box h2,
 .box h4 {
     margin: 0;
@@ -25,9 +27,11 @@ body {
     color: #fff;
     text-align: center;
 }
+
 .box .inputBox {
     position: relative;
 }
+
 .box .inputBox input {
     width: 100%;
     padding: 10px 0;
@@ -40,6 +44,7 @@ body {
     outline: none;
     background: transparent;
 }
+
 .box .inputBox label {
     position: absolute;
     top: 0;
@@ -51,20 +56,74 @@ body {
     pointer-events: none;
     transition: .5s;
 }
+
 .box .inputBox input:focus~label,
 .box .inputBox input:valid~label {
     top: -18px;
     left: 0;
-    color: #32be0f;
+    color: #03a9f4;
     font-size: 12px;
 }
+
 .box input[type="submit"] {
     background: transparent;
     border: none;
     outline: none;
     color: #fff;
-    background: #207220;
+    background: #03a9f4;
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
+
+a {
+    text-decoration: none;
+}
+
+.myButton {
+	box-shadow: 0px 1px 0px 0px #fff6af;
+	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+	background-color:#ffec64;
+	border-radius:6px;
+	border:1px solid #ffaa22;
+	display:inline-block;
+	cursor:pointer;
+	color:#333333;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffee66;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+	background-color:#ffab23;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
